<resources>
    <string name="app_name">Unlimited Proxy</string>
    <string name="master_amp_unlimited_proxy"><![CDATA[Master &Unlimited Proxy]]></string>
    <string name="connect_with_the_world_safely_and_quickly">connect with the world Safely and quickly</string>
    <string name="terms_of_service">Master &amp; Unlimited Proxy has always been committed to protecting your privacy and data. The EU\'s General Data Protection Regulation has prompted us to review our policies and make sure we\'re doing the right thing for all our users around the world.</string>
    <string name="agree_amp_contionue">Agree &amp; Contionue</string>
    <string name="terms_of_service_title">Terms of Service</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="state">State</string>
    <string name="connection_success">Connection Successful</string>
    <string name="disconnection_success">DisConnected Successful</string>
    <string name="reconnect">Reconnect</string>
    <string name="more_service">More servers</string>
    <string name="retry">Retry</string>
    <string name="connection_failure">Connection Failure</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="close_vpn_dialog_content">Time remaining after disconnection Will be static, Do you want to disconnect</string>
    <string name="creating_vpn">Creating VPN</string>
    <string name="please_wait">Please wait</string>
    <string name="confirm_to_logout_of_vpn">Confirm to logout of VPN?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="timer_over_tip_content">Too bad！Time is over， Whether to get free time immediately？</string>
    <string name="immediately">Immediately</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="remaining_time">Remaining time</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="custom_server">Custom server</string>
    <string name="more">More</string>
    <string name="master_amp_unlimited_proxy_v1_0_0"><![CDATA[Master & Unlimited Proxy V1.0.0]]></string>
    <string name="connection_successful">Connection Successful</string>
    <string name="to_connect_please_try_the_follows">To connect,please try the follows</string>
    <string name="_1_check_your_internet_connection_is_working">1.Check your internet Connection is working</string>
    <string name="_2_try_a_differnet_vpn_server">2.Try a differnet VPN Server</string>
    <string name="vpn_server">VPN Server</string>
    <string name="united_states">United States</string>
    <string name="speed">Speed</string>
    <string name="s">/S</string>
    <string name="fast_servers">Fast Servers</string>
    <string name="all">ALL</string>
</resources>