<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_basic_background"
    android:orientation="vertical"
    tools:context=".ui.ConnectResultActivity">

    <View
        android:id="@+id/status_bar_dimen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/title_bar" />

    <ImageView
        android:id="@+id/state_im"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:src="@mipmap/success_light" />

    <TextView
        android:id="@+id/state_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/connection_successful"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/out_container_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_connect_please_try_the_follows"
            android:textColor="#ffffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_1_check_your_internet_connection_is_working"
            android:textColor="#ff3beff1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/_2_try_a_differnet_vpn_server"
            android:textColor="#ff3beff1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/success_container_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/vpn_server"
                android:textColor="#ffffffff"
                android:textSize="16sp" />

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/suc_server_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/united_states"
                android:textColor="#ff3beff1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/speed_container_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/speed"
                android:textColor="#ffffffff"
                android:textSize="16sp" />

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/suc_speed_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/s"
                android:textColor="#ff3beff1"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/more_server_bt"
        android:layout_width="242.67dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:background="@drawable/shape_e_25"
        android:drawableRight="@mipmap/arrow_right"
        android:drawablePadding="-50dp"
        android:paddingEnd="50dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/reconnect_bt"
        android:layout_width="242.67dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:text="@string/reconnect"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone" />

</LinearLayout>