<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/shape_white_16"
    android:paddingTop="26dp"
    android:paddingStart="26dp"
    android:paddingEnd="26dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@mipmap/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_to_logout_of_vpn"
        android:textColor="#ff727272"
        android:textSize="16sp"
        android:layout_marginTop="42dp"/>

    <Button
        android:id="@+id/no_bt"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:text="@string/no"
        android:textColor="@color/white"
        android:background="@drawable/shape_teal_21"/>


    <Button
        android:id="@+id/yes_bt"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="26dp"
        android:text="@string/yes"
        android:textColor="#7F2C2C2C"
        android:background="@drawable/shape_gray_21"/>



</LinearLayout>