<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_basic_background"
        android:orientation="vertical">

        <View
            android:id="@+id/status_bar_dimen"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:elevation="0dp">

            <com.yw.unlimitedproxy.view.ToolBar
                android:id="@+id/tool"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:elevation="0dp" />


        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp">

            <com.yw.unlimitedproxy.view.CountDownTextView
                android:id="@+id/running_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="00:00:00"
                android:textColor="@color/white"
                android:textSize="43sp" />

            <TextView
                android:id="@+id/add_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/running_time_tv"
                android:text=""
                android:textColor="@color/yellow"
                android:textSize="12sp"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/remaining_time"
            android:textAlignment="center"
            android:textColor="#ff29b9ba"
            android:textSize="12sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/server_container_rl"
                android:layout_width="327dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:background="@drawable/shape_teal_17"
                android:clickable="true">

                <ImageView
                    android:id="@+id/flag_im"
                    android:layout_width="52dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:src="@mipmap/emtpy_flag" />

                <TextView
                    android:id="@+id/server_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="9dp"
                    android:layout_toRightOf="@+id/flag_im"
                    android:text="@string/custom_server"
                    android:textColor="#ffffffff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/temp2_im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@mipmap/arrow_right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="6dp"
                    android:layout_toLeftOf="@+id/temp2_im"
                    android:text="@string/more"
                    android:textAllCaps="true"
                    android:textColor="#ffffffff"
                    android:textSize="12sp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/server_container_rl"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="56dp">

                <ImageView
                    android:id="@+id/success_ripper_im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/connection_success_ripper_icon"
                    android:visibility="gone" />

                <com.yw.unlimitedproxy.view.SwitchView
                    android:id="@+id/toggle_sv"
                    android:layout_width="wrap_content"
                    android:layout_height="203dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="51dp" />

            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/navi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FF2D2258"
        android:divider="@null"
        android:dividerHeight="10dp"
        android:listSelector="@drawable/ripper_white" />


    <!--    <com.google.android.material.navigation.NavigationView-->
    <!--        android:id="@+id/navi"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_gravity="start"-->
    <!--        android:background="@color/basic_black"-->
    <!--        app:headerLayout="@layout/home_header"-->
    <!--        app:itemIconTint="@color/white"-->
    <!--        app:itemTextColor="@color/white"-->
    <!--        app:menu="@menu/left_menu" />-->

</androidx.drawerlayout.widget.DrawerLayout>